--- a/blogapp/blogapp/pom.xml
+++ b/blogapp/blogapp/pom.xml
@@ -36,6 +36,12 @@
             <version>1.1.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>8.16</version>
+        </dependency>
+        
         <!-- dipendenze per i test -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
