--- a/blogapp/blogapp-st/pom.xml
+++ b/blogapp/blogapp-st/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-    <artifactId>blogapp-service</artifactId>
-    <groupId>it.tss</groupId>
-    <version>1.0</version>
-  </parent>
+        <artifactId>blogapp-service</artifactId>
+        <groupId>it.tss</groupId>
+        <version>1.0</version>
+    </parent>
     <groupId>it.tss</groupId>
     <artifactId>blogapp-st</artifactId>
     <version>1.0</version>
@@ -42,6 +42,11 @@
     </build>
     <dependencies>
         <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>2.31</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-rs-mp-client</artifactId>
             <version>3.3.6</version>
@@ -56,7 +61,7 @@
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 </project>
