--- a/blogapp/blogapp/pom.xml
+++ b/blogapp/blogapp/pom.xml
@@ -61,6 +61,11 @@
             <version>3.0.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.airhacks</groupId>
+            <artifactId>jaxrs-cors</artifactId>
+            <version>0.0.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
