--- a/blogapp/blogapp/pom.xml
+++ b/blogapp/blogapp/pom.xml
@@ -42,6 +42,12 @@
             <version>8.16</version>
         </dependency>
         
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>11.0.0</version>
+        </dependency>
+        
         <!-- dipendenze per i test -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
